--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,110 @@
+* {
+	box-sizing: border-box;
+	color: #777777;
+}
 
+p {
+	font-size: 18px;
+	line-height: 28px;
+	margin-bottom: 20px;
+}
 
+aside {
+	width: 270px;
+	position: relative;
+	right: 25%
+}
 
+h1 {
+	font-size: 36px;
+	line-height: 45px;
+	margin-bottom: 20px;
+	color: #4aaaa5;
+}
+
+.navbar {
+	position: relative;
+	right: 0px;
+	text-align: auto;
+	float: right;
+	
+	font-size: 18px;
+}
+
+img {
+	float: left;
+	margin: 15px;
+}
+
+.head {
+	width: 960px;	
+}
+
+header {
+	clear: auto;
+	margin-left: 150px;
+	margin-right: 85px;
+
+	margin-right: 250px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+.contentbox {
+	position: relative;
+	left: 20%;
+	padding: 20px;
+	margin-right: 85px;
+	float: left;
+	text-align: left;
+}
+
+#hidden {
+	width: 64px;
+	float: left;
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	background-color: white;
+}
+
+.header1 {
+	height: 64px;
+	width: 290px;
+	margin: 10px auto 0px auto;
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	background-color: #4aaaa5;
+	text-align: center;
+	text-decoration-color: white;
+	padding: 10px;
+	color: #ffffff;
+	clear: both;
+	position: left;
+}
+
+main {
+	width: 960px;
+	position: absolute;
+	text-align: center;
+	float: left;
+	clear: both;
+
+}
+
+.mainarea {
+	background-image: "assets/images/back_pattern.png";
+	background-repeat: repeat;
+	margin-top: 64px;
+}
+
+section {
+	width: 650px;
+}
+
+a {
+	color: #777777;
+}
 
 /* to make the footer sticky to the bottom */
 
@@ -10,11 +114,19 @@ html {
 }
 body {
     margin: 0 0 100px; /* bottom = footer height */
+    font-size: 24px;
+    text-decoration-color: #777777
+    line-height: 32px;
+    color: #333;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif
 }
+
 footer {
     position: absolute;
     left: 0;
     bottom: 0;
     height: 100px;
     width: 100%;
+    text-align: center;
+    font-size: 12px;
 }
