--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,17 @@
 }
 
 p {
-	font-size: 18px;
-	line-height: 28px;
+	font-size: 12px;
+	line-height: 24px;
 	margin-bottom: 20px;
+	text-align: left;
 }
 
 aside {
-	width: 270px;
-	position: relative;
-	right: 25%
+	width: 310px;
+	right: 25%;
+	height: 270px;
+	background-color: white;
 }
 
 h1 {
@@ -20,14 +22,22 @@ h1 {
 	line-height: 45px;
 	margin-bottom: 20px;
 	color: #4aaaa5;
+	text-align: left;
+}
+
+h2 {
+	font-size: 28px;
+	line-height: 45px;
+	margin-bottom: 20px;
+	color: #4aaaa5;
+	text-align: center;
 }
 
 .navbar {
-	position: relative;
-	right: 0px;
+	position: absolute;
+	top: 15px;
+	left: 700px;
 	text-align: auto;
-	float: right;
-	
 	font-size: 18px;
 }
 
@@ -37,41 +47,40 @@ img {
 }
 
 .head {
-	width: 960px;	
+	width: 960px;
+	height: 64px;
+	padding: 0px;
+	margin: 0px;
+	border-bottom: 8px;
+	border-bottom-color: #4AAAA5
+	border-style: solid;
 }
 
 header {
 	clear: auto;
 	margin-left: 150px;
-	margin-right: 85px;
 
-	margin-right: 250px;
+	margin-right: 85px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 .contentbox {
 	position: relative;
-	left: 20%;
-	padding: 20px;
-	margin-right: 85px;
+	left: 20px;
+	padding: 20px 20px 20px 20px;
+	width: 500px;
 	float: left;
-	text-align: left;
-}
-
-#hidden {
-	width: 64px;
-	float: left;
-	position: fixed;
-	left: 0px;
-	top: 0px;
+	text-align: center;
 	background-color: white;
 }
+
+
 
 .header1 {
 	height: 64px;
 	width: 290px;
-	margin: 10px auto 0px auto;
-	position: fixed;
+	margin: 0px 0px 0px 50px;
+	position: relative;
 	left: 0px;
 	top: 0px;
 	background-color: #4aaaa5;
@@ -79,23 +88,35 @@ header {
 	text-decoration-color: white;
 	padding: 10px;
 	color: #ffffff;
-	clear: both;
 	position: left;
 }
 
 main {
 	width: 960px;
-	position: absolute;
+	position: relative;
 	text-align: center;
 	float: left;
 	clear: both;
-
+	background-image: url("https://pixabay.com/photo-1014963/");
+	background-repeat: repeat;
+	background-color: #cccccc;
+	padding: 15px;
+	margin: 0px auto 0px 15px;
 }
 
+.connect {
+	position: absolute;
+	right: 15px;
+	top: 15px;
+	float: right;
+	clear: both;
+}
+
+
 .mainarea {
-	background-image: "assets/images/back_pattern.png";
-	background-repeat: repeat;
-	margin-top: 64px;
+	border-width: 15px;
+	float: left;
+	position: center;
 }
 
 section {
@@ -115,7 +136,6 @@ html {
 body {
     margin: 0 0 100px; /* bottom = footer height */
     font-size: 24px;
-    text-decoration-color: #777777
     line-height: 32px;
     color: #333;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif
@@ -129,4 +149,5 @@ footer {
     width: 100%;
     text-align: center;
     font-size: 12px;
+    padding-top: 25px;
 }
