done with opener for not, time to update the rest

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,8 @@ aside {
 
 h1 {
 	font-size: 36px;
-	line-height: 45px;
-	margin-bottom: 20px;
+	line-height: 36px;
+	margin-bottom: 0px;
 	color: #4aaaa5;
 	text-align: left;
 }
@@ -39,6 +39,13 @@ h2 {
 	left: 700px;
 	text-align: auto;
 	font-size: 18px;
+
+}
+
+.links {
+	float: relative;
+	position: center;
+
 }
 
 img {
@@ -110,6 +117,8 @@ main {
 	top: 15px;
 	float: right;
 	clear: both;
+	text-align: left;
+	padding: 35px;
 }
 
 
@@ -146,8 +155,16 @@ footer {
     left: 0;
     bottom: 0;
     height: 100px;
-    width: 100%;
+    width: 950px;
     text-align: center;
     font-size: 12px;
+    color: white;
     padding-top: 25px;
+    background-color: #666666
+}
+
+.footer1 {
+	text-align: center;
+	color: lightgrey;
+	
 }
