--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,14 +103,18 @@ main {
 	position: relative;
 	text-align: center;
 	float: left;
-	background-image: url("https://pixabay.com/photo-1014963/");
+	background-image: url("../images/back_pattern.png");
 	background-repeat: repeat;
 	background-color: #cccccc;
 	padding: 15px;
 	margin: 0px auto 0px 15px;
 	height: auto;
-	clear: both;
-
+	border-style: solid;
+	border-top-color: #4aaaa5;
+	border-top-width: 8px;
+	border-left-width: 0px;
+	border-right-width: 0px;
+	border-bottom-width: 0px;
 }
 
 .connect {
@@ -128,9 +132,7 @@ br {
 }
 
 .mainarea {
-	border-width: 15px;
 	float: left;
-	position: center;
 }
 
 section {
@@ -152,21 +154,22 @@ body {
     font-size: 24px;
     line-height: 32px;
     color: #333;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 footer {
-    position: absolute;
-    left: 15px;
-    bottom: 0;
-    height: auto;
+    height: 70px;
     width: 960px;
     text-align: center;
     font-size: 12px;
     color: white;
     padding-top: 25px;
-    background-color: #666666
-
+    background-color: #666666;
+	clear: both;
+	margin-left: 15px;
+	border-style: solid;
+	border-top-color: #4aaaa5;
+	border-top-width: 8px;
 }
 
 .footer1 {
@@ -175,7 +178,7 @@ footer {
 }
 
 .pizza {
-	background-image: url(assets/images/cat1);
+	background-image: url('../images/cat1.jpg');
 	height: 220px;
 	width: 220px;
 	background-color: yellow;
@@ -183,17 +186,14 @@ footer {
 	margin: 20px 15px 20px 15px;
 }
 
-#pizza1 {
+.innerpizza {
 	color: white;
 	height: 36px;
 	width: 220px;
-	background-color: #4aaaa5
-	font-size: 16px;
+	background-color: #4aaaa5;
+	font-size: 18px;
 	text-align: center;
-	float: relative;
 	bottom: 15px;
-	top: 40%;
-
 
 }
 
