--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ h2 {
 	left: 700px;
 	text-align: auto;
 	font-size: 18px;
+	
 
 }
 
@@ -79,8 +80,28 @@ header {
 	float: left;
 	text-align: center;
 	background-color: white;
+
 }
 
+/* unvisited link */
+a:link {
+    color: white;
+}
+
+/* visited link */
+a:visited {
+    color: white;
+}
+
+/* mouse over link */
+a:hover {
+    color: white;
+}
+
+/* selected link */
+a:active {
+    color: white;
+}
 
 
 .header1 {
@@ -193,7 +214,92 @@ footer {
 	background-color: #4aaaa5;
 	font-size: 18px;
 	text-align: center;
-	bottom: 15px;
+	position: relative;
+	bottom: -170px;
+	
+}
+
+.avocado {
+	background-image: url('../images/cat2.jpg');
+	height: 220px;
+	width: 220px;
+	background-color: yellow;
+	float: left;
+	margin: 20px 15px 20px 15px;
+}
+
+.inneravocado {
+	color: white;
+	height: 36px;
+	width: 220px;
+	background-color: #4aaaa5;
+	font-size: 18px;
+	text-align: center;
+	position: relative;
+	bottom: -170px;
+	
+}
+
+.habanero {
+	background-image: url('../images/cat3.jpg');
+	height: 220px;
+	width: 220px;
+	background-color: yellow;
+	float: left;
+	margin: 20px 15px 20px 15px;
+}
+
+.innerhabanero {
+	color: white;
+	height: 36px;
+	width: 220px;
+	background-color: #4aaaa5;
+	font-size: 18px;
+	text-align: center;
+	position: relative;
+	bottom: -170px;
+	
+}
+
+.ghostpepper {
+	background-image: url('../images/cat4.jpg');
+	height: 220px;
+	width: 220px;
+	background-color: yellow;
+	float: left;
+	margin: 20px 15px 20px 15px;
+}
+
+.innerghost {
+	color: white;
+	height: 36px;
+	width: 220px;
+	background-color: #4aaaa5;
+	font-size: 18px;
+	text-align: center;
+	position: relative;
+	bottom: -170px;
+	
+}
+
+.jalepeno {
+	background-image: url('../images/cat4.jpg');
+	height: 220px;
+	width: 220px;
+	background-color: yellow;
+	float: left;
+	margin: 20px 15px 20px 15px;
 
 }
 
+.innerjalepeno {
+	color: white;
+	height: 36px;
+	width: 220px;
+	background-color: #4aaaa5;
+	font-size: 18px;
+	text-align: center;
+	position: relative;
+	bottom: -170px;
+	
+}
